<!-- Adapt to use ROS2 -->
<package format="3">
  <name>brace_bottom_setup</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for brace_bottom_setup</p>
    <p>This package contains configuration data, 3D models and launch files
for brace_bottom_setup robot</p>
  </description>
  <author>Arnaud TANGUY</author>
  <maintainer email="arn.tanguy@gmail.com" />
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
